--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
 <body>
   <div id="image">
   </div>
-  <script>
-    http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js
+  <script type=>
+    
   </script>
 </body>
